# isutils

./: .gitignore  Cargo.toml  Justfile  README.md  TODO.md  __init__.py  form.ui  freeeze.py  isu.pro  isutils.pyproj  lab.py  main.py  main.pyproject  main.pyproject.user.4712d14  nb.ipynb  pyproject.toml  render.py  requirements.txt  setup.py  ui.ipynb
.github/workflows/: ci.yml  py.yml
.ionide/: symbolCache.db
.pytype/: build.ninja
.pytype/imports/: isutils.isu.models.demo.imports  isutils.isu.ui.ops.audio.imports  isutils.isu.ui.ops.crop.imports  isutils.isu.ui.ops.tab.imports  isutils.isu.ui.ops.tabs.imports  isutils.video.imports
.qt_for_python/rcc/: isu.py
.qt_for_python/uic/: audio.py  clip.py  crop.py  data.py  data_full.py  demo.py  demodialog.py  demoview.py  edit.py  env.py  eren.py  insert.py  loaded.py  main.py  op.py  ops.py  pace.py  pane.py  prefs.py  preview.py  pro.py  prod.py  prof.py  prop.py  render.py  render_dialog.py  section.py  shell.py  steps.py  tab.py  tabs.py  text.py  time.py  u.py  v.py  views.py  w.py  win.py  wind.py  window - Copy.py  (+1 more)
.vim/: coc-settings.json
app/: Cargo.toml
isu/: __init__.py  __main__.py  app.py  data.py  isu.py  main.py  nb.ipynb  qt.py  requirements.txt  setup.py  test.py
isu/.pytype/: build.ninja
isu/common/: op.py  utils.py
isu/data/: __init__.py  context.py  demo.py  schema.py  store.py
isu/models/: __init__.py  audio.py  cursor.py  demo.py  demo_tags.py  operation.py  script.py  section.py  step.py  video.py
isu/operation/: __init__.py  audio.py  compose.py  crop.py  insert.py  operation.py  pace.py  render.py  resize.py  section.py  shell.py  text.py
isu/ops/: __init__.py  ops.py  render.py  section.py
isu/qml/: win.qml
isu/ui/: __init__.py  app.py  data.py  load.py  main.qml  settings.py  tabs.py  tabs.ui  ui.ipynb  w.ui  win.ui  wind.ui  window.py  window.ui
isu/utils/: __init__.py
lab/: anim.py
lib/: Cargo.toml  main.py  pyproject.toml
lib/alt/: alt.nimble  altm.py  (+1 more)
nb/: Untitled.ipynb  Untitled1.ipynb  de.ipynb  nb.ipynb  ui.ipynb  xml.ipynb
res/: isu.qrc
rlib/: Cargo.toml
src/: Untitled.ipynb  main.py  main.spec  main.ui  requirements.txt  setup.py  shell.py  test.ipynb  test.py  window.py
view/: demo.py  settings.py
(+169 files in other folders)
