[tool.poetry]
name = "ls"
version = "0.1.0"
description = ""
authors = ["Chris P <chrisp1877@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
lxml="*"
python-docx="*"
pyqt5="*"
mutagen="*"
pillow="*"
pylint = "^2.8.2"

[tool.poetry.dev-dependencies]
mypy="*"
black = {version = "^20.8b1", allow-prereleases = true}

[tool.poetry.scripts]
run="python3 src/main.py"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

